@startuml

title __EJERCICIO1Y2's Class Diagram__\n

  package ar.edu.unahur.obj2 {
    package ar.edu.unahur.obj2.ejercicio1y2 {
      class Prestamo {
          - hipoteca : float
          - excepcional : float
          - rating : int
          - expiry : Date
          - madurez : Date
          + Prestamo()
          + Prestamo()
          + Prestamo()
          + getCompromiso()
          + getPorcentajeNoUtilizado()
      }
    }
  }
  

  package ar.edu.unahur.obj2 {
    package ar.edu.unahur.obj2.ejercicio1y2 {
      class SistemaAleman {
          + SistemaAleman()
          + capital()
          + duracion()
      }
    }
  }
  

  package ar.edu.unahur.obj2 {
    package ar.edu.unahur.obj2.ejercicio1y2 {
      abstract class SistemaDeAmortizacion {
          + SistemaDeAmortizacion()
          {abstract} + capital()
          + duracion()
          # factorDeRiesgo()
      }
    }
  }
  

  package ar.edu.unahur.obj2 {
    package ar.edu.unahur.obj2.ejercicio1y2 {
      class SistemaFrances {
          + SistemaFrances()
          + capital()
      }
    }
  }
  

  Prestamo o-- SistemaDeAmortizacion : estrategia
  SistemaAleman -up-|> SistemaDeAmortizacion
  SistemaDeAmortizacion o-- Prestamo : prestamo
  SistemaFrances -up-|> SistemaDeAmortizacion


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
